--- a/src/App.css
+++ b/src/App.css
@@ -9,12 +9,20 @@
   background-color: black;
   color: white;
 }
-p {
-  font-weight: bold;
-  font-size: 24px;
+
+.Landing-Logo {
+  font-size: 100px;
+  margin-top: 50px;
+  margin-bottom: 20px;
 }
 
-h1 {
-  font-size: 48px;
+footer {
+  font-size: 14px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 0rem;
+  text-align: center;
+  border-top: .5px solid #333;
 }
-
