adjusted background styling for entire app instead of body tag. Changed body tag to div in App.jsx. Used state to connect back end to front end Api message.

--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,11 @@
   text-align: center;
 }
 
-.app {
+* {
   background-color: black;
+}
+
+.app {
   color: white;
 }
 
@@ -25,6 +28,10 @@ footer {
   padding: 0rem;
   text-align: center;
   border-top: .5px solid #333;
+}
+
+.Api-Message {
+  color: white;
 }
 
 /* Mobile Responsive Design */
