--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -11,6 +11,11 @@
     height: 30px;
 }
 
+#logo-button {
+    border: none;
+    border-color: transparent;
+}
+
 button{
     margin-right: 1rem;
     background-color: transparent;
