--- a/src/components/DashboardLink.css
+++ b/src/components/DashboardLink.css
@@ -1,3 +1,18 @@
-span {
-    background-color: transparent;
+.dashboard-link {
+    display: inline-block;
+    width: 100%;
+    text-align: left;
+    padding: 0;
+    margin: 0;
+    background: transparent;
+    background-image: none;
+    border: none;
+    color: inherit;
+}
+
+/* Ensure the inner text doesn't create its own focus/outline */
+.dashboard-link:focus,
+.dashboard-link:active {
+    outline: none;
+    box-shadow: none;
 }
